add services for all users

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,6 +19,8 @@
     </div>
 
     <button type="submit">Login</button>
+    <p th:if="${error}" th:text="${error}" style="color: red;"></p>
 </form>
+
 </body>
 </html>
